<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdminHome.AdminHomeActivity">

    <ImageButton
        android:id="@+id/aptsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="220dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appointments_icon" />

    <ImageButton
        android:id="@+id/cleanersBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aptsBtn"
        app:srcCompat="@drawable/cleaners_icon" />

    <ImageButton
        android:id="@+id/custmersBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aptsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/customerrs_icon" />

    <ImageButton
        android:id="@+id/statsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/cleanersBtn"
        app:layout_constraintTop_toBottomOf="@+id/custmersBtn"
        app:srcCompat="@drawable/statistics_icon" />

    <TextView
        android:id="@+id/edtApts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="@dimen/admin_home_txt_margin"
        android:text="@string/apt_btn_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/aptsBtn"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="@+id/aptsBtn"
        app:layout_constraintTop_toBottomOf="@+id/aptsBtn" />

    <TextView
        android:id="@+id/edtCustomers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="24dp"
        android:text="@string/customers_btn_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/custmersBtn"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="@+id/custmersBtn"
        app:layout_constraintTop_toBottomOf="@+id/custmersBtn" />

    <TextView
        android:id="@+id/edtCleaners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="@dimen/admin_home_txt_margin"
        android:text="@string/cleaners_btn_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/cleanersBtn"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="@+id/cleanersBtn"
        app:layout_constraintTop_toBottomOf="@+id/cleanersBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/admin_home_txt_margin"
        android:text="@string/stats_btn_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/statsBtn"
        app:layout_constraintStart_toStartOf="@+id/statsBtn"
        app:layout_constraintTop_toBottomOf="@+id/statsBtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/admin_home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>